crates/carta/tests/snapshots/golden_writer__org__table__table-in-blockquote.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
#+begin_quote
| a | b |
|---+---|
| 1 | 2 |
#+end_quote
