crates/carta/tests/snapshots/golden_writer__org__table__table-short-caption.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
| h |
|---|
| v |
#+caption: The full caption text
