crates/carta/tests/snapshots/golden_writer__org__table__table-simple.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
| h1 | h2 |
|----+----|
| a  | b  |
