crates/carta/tests/snapshots/golden_writer__org__table__table-wide-unicode.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
| 項目 | 値           |
|------+--------------|
| 名前 | 漢字テキスト |
| x    | y            |
